[package]
name = "mdbook-abbr"
version = "0.1.0"
edition = "2021"
authors = ["staticf0x <staticf0x@pm.me>"]
description = "mdBook preprocessor that expands defined abbreviations"
keywords = ["mdbook", "preprocessor"]
categories = ["command-line-utilities"]
homepage = "https://github.com/staticf0x/mdbook-abbr"
repository = "https://github.com/staticf0x/mdbook-abbr"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "README.md", "LICENSE", "Cargo.lock", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = { version = "0.4.35", features = [] }
regex = "1.10.2"
serde_json = "1.0.108"
