[package]
name = "mdbook-abbr"
version = "0.1.0"
edition = "2021"
authors = ["staticf0x <staticf0x@pm.me>"]
description = "mdBook preprocessor that expands defined abbreviations"
keywords = ["mdbook", "preprocessor"]
categories = ["command-line-utilities"]
homepage = "https://github.com/staticf0x/mdbook-abbr"
repository = "https://github.com/staticf0x/mdbook-abbr"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "README.md", "LICENSE", "Cargo.lock", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
mdbook-preprocessor = "0.5.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
